# anthill

./: .gitignore  CLAUDE.md  LICENSE  README.md  core.py  handlers.py  justfile  logger.py  main-cm.py  main-v1.py  main.py  mission.py  pyproject.toml  slack-server-design.md  spike.py
.claude/: settings.local.json
.claude/commands/: branch.md  derive_feature.md  document.md  implement.md  prime.md  specify.md
.claude/skills/design-expert/: SKILL.md  expertise.yaml  question.md  self-improve.md
.github/: CODEOWNERS
app_docs/: README.md  http_server.md  instrumentation.md  releasing.md  slack.md  testing_policy.md
specs/: bugfix-git-execute-prepend-git.md  chore-framework-logging.md  chore-prepare-for-release.md  chore-rename-to-antkeeper.md  feature-add-claude-code.md  feature-add-cli.md  feature-add-init-subcommand.md  feature-api-channel.md  feature-claude-cli-options.md  feature-git-module.md  feature-git-worktrees.md  feature-slack-integration.md  fix-slack-env-validation.md  patch-implicit-prompt-file.md  patch-prompt-file-option.md  patch-sdlc-workflow.md  patch-store-state.md
src/anthill/: __init__.py  cli.py  server.py
src/anthill/channels/: api.py  (+3 more)
src/antkeeper/: __init__.py  __main__.py  cli.py  server.py
tests/: __init__.py  conftest.py  test_claude_code_agent.py  test_cli.py  test_cli_channel.py  test_server.py  test_slack_server.py  test_workflows.py
tests/channels/: __init__.py  test_api_channel.py  test_cli_channel.py  test_slack_channel.py
tests/core/: __init__.py  test_logging.py  test_state_persistence.py  test_workflows.py
tests/git/: __init__.py  conftest.py  test_branch.py  test_context.py  test_core.py  test_worktree.py
tests/helpers/: __init__.py  test_extract_json.py
tests/llm/: __init__.py  test_claude_code_agent.py
(+35 files in other folders)
