[project]
name = "anthill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ruff", "ty", "fastapi", "uvicorn[standard]", "httpx", "python-dotenv"]

[dependency-groups]
dev = ["pytest", "httpx"]

[project.scripts]
anthill = "anthill.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"
