[project]
name = "antkeeper"
version = "0.1.0"
description = "Workflow engine with handler registration, channel-based I/O, and remote execution"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Adrian Mowat" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = ["python-dotenv", "httpx", "fastapi", "uvicorn[standard]"]

[dependency-groups]
dev = ["pytest", "ruff", "ty"]

[project.urls]
Homepage = "https://github.com/mowat27/antkeeper"
Repository = "https://github.com/mowat27/antkeeper"

[project.scripts]
antkeeper = "antkeeper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"
